tests/snapshots/snapshots__snapshot_base16_gruvbox_dark_hard.snap
---
source: tests/snapshots.rs
expression: content
---
//! Gruvbox dark, hard color theme.
//!
//! Auto-generated by `cargo xtask generate base16` — do not edit.

use crate::{Color, Contrast, Theme, Variant};
use alloc::borrow::Cow;

/// Gruvbox dark, hard
///
/// Author: Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
/// Variant: Dark
/// Contrast: Normal
/// Source: base16 (tinted-theming/schemes)
pub const THEME: Theme = Theme {
    name: Cow::Borrowed("Gruvbox dark, hard"),
    author: Cow::Borrowed(
        "Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)",
    ),
    variant: Variant::Dark,
    contrast: Contrast::Normal,
    bg: Color::from_hex(0x1d2021),
    fg: Color::from_hex(0xd5c4a1),
    cursor: Some(Color::from_hex(0xd5c4a1)),
    selection: Some(Color::from_hex(0x504945)),
    line_highlight: Some(Color::from_hex(0x3c3836)),
    gutter: Some(Color::from_hex(0x665c54)),
    statusbar_bg: Some(Color::from_hex(0x3c3836)),
    statusbar_fg: Some(Color::from_hex(0xbdae93)),
    comment: Some(Color::from_hex(0x665c54)),
    keyword: Some(Color::from_hex(0xd3869b)),
    string: Some(Color::from_hex(0xb8bb26)),
    function: Some(Color::from_hex(0x83a598)),
    variable: Some(Color::from_hex(0xfb4934)),
    r#type: Some(Color::from_hex(0xfabd2f)),
    constant: Some(Color::from_hex(0xfe8019)),
    operator: Some(Color::from_hex(0xd5c4a1)),
    tag: Some(Color::from_hex(0xfb4934)),
    error: Some(Color::from_hex(0xfb4934)),
    warning: Some(Color::from_hex(0xfabd2f)),
    info: Some(Color::from_hex(0x83a598)),
    success: Some(Color::from_hex(0xb8bb26)),
    red: Some(Color::from_hex(0xfb4934)),
    orange: Some(Color::from_hex(0xfe8019)),
    yellow: Some(Color::from_hex(0xfabd2f)),
    green: Some(Color::from_hex(0xb8bb26)),
    cyan: Some(Color::from_hex(0x8ec07c)),
    blue: Some(Color::from_hex(0x83a598)),
    purple: Some(Color::from_hex(0xd3869b)),
    magenta: Some(Color::from_hex(0xd65d0e)),
};
