tests/snapshots/snapshots__snapshot_base16_mod_header.snap
---
source: tests/snapshots.rs
expression: content
---
//! Base16 color themes.
//!
//! Themes sourced from [tinted-theming/schemes](https://github.com/tinted-theming/schemes).
//! Each theme provides the standard 16 base16 palette slots mapped to
//! semantic color roles.
//!
//! Enable with the `base16` feature flag.
//!
//! Auto-generated by `cargo xtask generate base16` — do not edit.

use crate::Theme;

pub mod _0x96f;
pub mod _3024;
pub mod apathy;
pub mod apprentice;
pub mod ascendancy;
pub mod ashes;
pub mod atelier_cave;
pub mod atelier_cave_light;
