tests/snapshots/snapshots__snapshot_base24_adventure_time.snap
---
source: tests/snapshots.rs
expression: content
---
//! Adventure Time color theme (base24).
//!
//! Auto-generated by `cargo xtask generate base24` — do not edit.

use crate::{Base16Palette, Base24Palette, Color, Contrast, Theme, Variant};

/// Adventure Time
///
/// Author: FredHappyface (https://github.com/fredHappyface)
/// Variant: Dark
/// Contrast: Normal
/// Source: base24 (tinted-theming/schemes)
pub const THEME: Theme = Theme {
    name: "Adventure Time",
    author: "FredHappyface (https://github.com/fredHappyface)",
    variant: Variant::Dark,
    contrast: Contrast::Normal,
    bg: Color::from_hex(0x1e1c44),
    fg: Color::from_hex(0xcdc3bf),
    cursor: Some(Color::from_hex(0xcdc3bf)),
    selection: Some(Color::from_hex(0x4e7bbf)),
    line_highlight: Some(Color::from_hex(0x050404)),
    gutter: Some(Color::from_hex(0x7893bf)),
    statusbar_bg: Some(Color::from_hex(0x050404)),
    statusbar_fg: Some(Color::from_hex(0xa3abbf)),
    comment: Some(Color::from_hex(0x7893bf)),
    keyword: Some(Color::from_hex(0x665992)),
    string: Some(Color::from_hex(0x49b117)),
    function: Some(Color::from_hex(0x0f49c6)),
    variable: Some(Color::from_hex(0xbc0013)),
    r#type: Some(Color::from_hex(0x1896c6)),
    constant: Some(Color::from_hex(0xe6741d)),
    operator: Some(Color::from_hex(0xcdc3bf)),
    tag: Some(Color::from_hex(0xbc0013)),
    error: Some(Color::from_hex(0xbc0013)),
    warning: Some(Color::from_hex(0x1896c6)),
    info: Some(Color::from_hex(0x0f49c6)),
    success: Some(Color::from_hex(0x49b117)),
    red: Some(Color::from_hex(0xfc5e59)),
    orange: Some(Color::from_hex(0xe6741d)),
    yellow: Some(Color::from_hex(0xefc11a)),
    green: Some(Color::from_hex(0x9dff6e)),
    cyan: Some(Color::from_hex(0x6fa497)),
    blue: Some(Color::from_hex(0xc8f9f3)),
    purple: Some(Color::from_hex(0x1896c6)),
    magenta: Some(Color::from_hex(0x9a5952)),
};

/// Full base24 palette with all 24 color slots.
pub const PALETTE: Base24Palette = Base24Palette {
    base: Base16Palette {
        base00: Color::from_hex(0x1e1c44),
        base01: Color::from_hex(0x050404),
        base02: Color::from_hex(0x4e7bbf),
        base03: Color::from_hex(0x7893bf),
        base04: Color::from_hex(0xa3abbf),
        base05: Color::from_hex(0xcdc3bf),
        base06: Color::from_hex(0xf8dbc0),
        base07: Color::from_hex(0xf5f4fb),
        base08: Color::from_hex(0xbc0013),
        base09: Color::from_hex(0xe6741d),
        base0a: Color::from_hex(0x1896c6),
        base0b: Color::from_hex(0x49b117),
        base0c: Color::from_hex(0x6fa497),
        base0d: Color::from_hex(0x0f49c6),
        base0e: Color::from_hex(0x665992),
        base0f: Color::from_hex(0x5e0009),
    },
    base10: Color::from_hex(0x34527f),
    base11: Color::from_hex(0x1a293f),
    base12: Color::from_hex(0xfc5e59),
    base13: Color::from_hex(0xefc11a),
    base14: Color::from_hex(0x9dff6e),
    base15: Color::from_hex(0xc8f9f3),
    base16: Color::from_hex(0x1896c6),
    base17: Color::from_hex(0x9a5952),
};
