tests/snapshots/snapshots__snapshot_base24_mod_header.snap
---
source: tests/snapshots.rs
expression: content
---
//! Base24 color themes.
//!
//! Themes sourced from [tinted-theming/schemes](https://github.com/tinted-theming/schemes).
//! Each theme provides the standard 24 base24 palette slots (16 base16 +
//! 8 extended accent colors) mapped to semantic color roles.
//!
//! Enable with the `base24` feature flag.
//!
//! Auto-generated by `cargo xtask generate base24` — do not edit.

use crate::Theme;

pub mod _0x96f;
pub mod _3024_day;
pub mod _3024_night;
pub mod adventure_time;
pub mod alien_blood;
pub mod argonaut;
pub mod arthur;
pub mod atelier_sulphurpool;
