tests/snapshots/snapshots__snapshot_emacs_dracula.snap
---
source: tests/snapshots.rs
expression: content
---
//! Dracula color theme.
//!
//! Auto-generated by `cargo xtask generate emacs` — do not edit.

use crate::{Color, Contrast, Theme, Variant};

/// Dracula
///
/// Variant: Dark
/// Contrast: Normal
/// Source: emacs (emacs-themes-site)
pub const THEME: Theme = Theme {
    name: "Dracula",
    author: "",
    variant: Variant::Dark,
    contrast: Contrast::Normal,
    bg: Color::from_hex(0x2b2b2b),
    fg: Color::from_hex(0xa9b7c6),
    cursor: Some(Color::from_hex(0x708183)),
    selection: Some(Color::from_hex(0x042028)),
    line_highlight: None,
    gutter: None,
    statusbar_bg: Some(Color::from_hex(0xa9b7c6)),
    statusbar_fg: Some(Color::from_hex(0x3c3f41)),
    comment: Some(Color::from_hex(0x808080)),
    keyword: Some(Color::from_hex(0xcc7832)),
    string: Some(Color::from_hex(0xa6c25c)),
    function: Some(Color::from_hex(0xfec66c)),
    variable: None,
    r#type: Some(Color::from_hex(0x4e807d)),
    constant: Some(Color::from_hex(0x6897bb)),
    operator: None,
    tag: None,
    error: None,
    warning: None,
    info: None,
    success: None,
    red: None,
    orange: None,
    yellow: None,
    green: Some(Color::from_hex(0xa6c25c)),
    cyan: Some(Color::from_hex(0x6897bb)),
    blue: Some(Color::from_hex(0xfec66c)),
    purple: Some(Color::from_hex(0xcc7832)),
    magenta: None,
};
