tests/snapshots/snapshots__snapshot_emacs_mod_header.snap
---
source: tests/snapshots.rs
expression: content
---
//! Emacs color themes.
//!
//! Themes parsed from [emacs-themes-site](https://github.com/emacs-themes/emacs-themes-site).
//! Colors extracted from `custom-theme-set-faces` definitions in `.el` files.
//!
//! Enable with the `emacs` feature flag.
//!
//! Auto-generated by `cargo xtask generate emacs` — do not edit.

use crate::Theme;

pub mod arjen;
pub mod assemblage;
pub mod bharadwaj;
pub mod bharadwaj_slate;
pub mod billw;
pub mod blackboard;
pub mod blippblopp;
pub mod bliss;
pub mod blue_sea;
