tests/snapshots/snapshots__snapshot_vim_mod_header.snap
---
source: tests/snapshots.rs
expression: content
---
//! Vim color themes.
//!
//! Themes parsed from [vim-colorschemes](https://github.com/flazz/vim-colorschemes)
//! and [vim/colorschemes](https://github.com/vim/colorschemes).
//! Colors extracted from `hi` (highlight) commands in `.vim` files.
//!
//! Enable with the `vim` feature flag.
//!
//! Auto-generated by `cargo xtask generate vim` — do not edit.

use crate::Theme;

pub mod _0x7a69_dark;
pub mod _256_grayvim;
pub mod _256_jungle;
pub mod _256_noir;
pub mod adventurous;
pub mod af;
pub mod anderson;
pub mod angr;
