tests/snapshots/snapshots__snapshot_vim_monokai.snap
---
source: tests/snapshots.rs
expression: content
---
//! Monokai color theme.
//!
//! Auto-generated by `cargo xtask generate vim` — do not edit.

use crate::{Color, Contrast, Theme, Variant};

/// Monokai
///
/// Variant: Dark
/// Contrast: High
/// Source: vim (vim-colorschemes)
pub const THEME: Theme = Theme {
    name: "Monokai",
    author: "",
    variant: Variant::Dark,
    contrast: Contrast::High,
    bg: Color::from_hex(0x272822),
    fg: Color::from_hex(0xf8f8f2),
    cursor: Some(Color::from_hex(0xf8f8f0)),
    selection: Some(Color::from_hex(0x49483e)),
    line_highlight: Some(Color::from_hex(0x3c3d37)),
    gutter: Some(Color::from_hex(0x90908a)),
    statusbar_bg: Some(Color::from_hex(0x64645e)),
    statusbar_fg: Some(Color::from_hex(0xf8f8f2)),
    comment: Some(Color::from_hex(0x75715e)),
    keyword: Some(Color::from_hex(0xf92672)),
    string: Some(Color::from_hex(0xe6db74)),
    function: Some(Color::from_hex(0xa6e22e)),
    variable: Some(Color::from_hex(0x66d9ef)),
    r#type: Some(Color::from_hex(0xf92672)),
    constant: None,
    operator: Some(Color::from_hex(0xf92672)),
    tag: Some(Color::from_hex(0xf92672)),
    error: Some(Color::from_hex(0xf8f8f0)),
    warning: Some(Color::from_hex(0xf8f8f0)),
    info: None,
    success: None,
    red: Some(Color::from_hex(0xf8f8f0)),
    orange: None,
    yellow: Some(Color::from_hex(0xf8f8f0)),
    green: Some(Color::from_hex(0xe6db74)),
    cyan: Some(Color::from_hex(0xf92672)),
    blue: Some(Color::from_hex(0xa6e22e)),
    purple: Some(Color::from_hex(0xf92672)),
    magenta: Some(Color::from_hex(0xf92672)),
};
